--- a/views/loginpage.ejs
+++ b/views/loginpage.ejs
@@ -36,7 +36,7 @@
         </section>
     </div>
 </body>
-<script>
+<!-- <script>
     sessionStorage.removeItem("sessionData");
-</script>
+</script> -->
 </html>
