--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -12,40 +12,37 @@
             var jegomn = document.getElementById('JEGO-side');
             var jemumn = document.getElementById('JEMU-side');
             var gogekmn = document.getElementById('GOGEK-side');
-            var JsonData = JSON.parse(sData);
             jegomn.style.display = "none";
             jemumn.style.display = "none";
             gogekmn.style.display = "none";
             switch(event.target.value){
             case "1":
-                if (JsonData["부서 ID"] == "재고") {
-                    jegomn.style.display = "block"
-                } else {
-                    alert("해당 부서에 대한 수정 권한이 없습니다.");
-                }
+                jegomn.style.display = "block"
                 break;
             case "2":
-                if (JsonData["부서 ID"] == "재무") {
-                    jemumn.style.display = "block"
-                } else {
-                    alert("해당 부서에 대한 수정 권한이 없습니다.");
-                }
+                jemumn.style.display = "block"
                 break;
             case "3":
-                if (JsonData["부서 ID"] == "고객") {
-                    gogekmn.style.display = "block"
-                } else {
-                    alert("해당 부서에 대한 수정 권한이 없습니다.");
-                }
+                gogekmn.style.display = "block"
                 break;
             }
         }
         function open_input(event){
-            var box = [[document.getElementById('ALLJEGO-search'),document.getElementById('Corporate-search'),document.getElementById('Corporate-input')
-                        ,document.getElementById('Corporate-item-search'),document.getElementById('item-input'),document.getElementById('input-item-search')
-                        ,document.getElementById('order'),document.getElementById('order-search')],
-                        [document.getElementById('ALLJEMU-search'),document.getElementById('fixed-expenditure-search'),document.getElementById('fixed-expenditure-input'),
-                        document.getElementById('staff-list-search'),document.getElementById('wating-order-search'),document.getElementById('sale-cost-search')],
+            var box = [[document.getElementById('ALLJEGO-search')
+                        ,document.getElementById('Corporate-search')
+                        ,document.getElementById('Corporate-input')
+                        ,document.getElementById('Corporate-item-search')
+                        ,document.getElementById('item-input')
+                        ,document.getElementById('input-item-warehousing')
+                        ,document.getElementById('input-item-search')
+                        ,document.getElementById('order')
+                        ,document.getElementById('order-search')]
+                        ,[document.getElementById('ALLJEMU-search')
+                        ,document.getElementById('fixed-expenditure-search')
+                        ,document.getElementById('fixed-expenditure-input'),
+                        document.getElementById('staff-list-search')
+                        ,document.getElementById('wating-order-search')
+                        ,document.getElementById('sale-cost-search')],
                         [document.getElementById('cs-list-search')]];
             var a = parseInt((event.target.value)/10);
             var b = (((event.target.value)%10)-1);
@@ -77,23 +74,39 @@
             <label class = "Toplabel">MENU</label>
             <div id = "JEGO-side">
                 <label class="sidemenuTop" style="text-align: center; font-weight: bold; font-size : 20px">재고관리</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="1" onclick='open_input(event)'>전체 재고 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="2" onclick='open_input(event)'>거래처 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="3" onclick='open_input(event)'>거래처 등록</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="4" onclick='open_input(event)'>거래처 물품 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="5" onclick='open_input(event)'>물품 등록</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="6" onclick='open_input(event)'>입고 현황 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="7" onclick='open_input(event)'>발주 요청</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="8" onclick='open_input(event)'>발주 요청 조회</label>
+                <% if (data["부서 ID"] == "재고") { %>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="1" onclick='open_input(event)'>전체 재고 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="2" onclick='open_input(event)'>거래처 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="3" onclick='open_input(event)'>거래처 등록</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="4" onclick='open_input(event)'>거래처 물품 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="5" onclick='open_input(event)'>물품 등록</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="6" onclick='open_input(event)'>입고 처리</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="7" onclick='open_input(event)'>입고 현황 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="8" onclick='open_input(event)'>발주 요청</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="9" onclick='open_input(event)'>발주 요청 조회</label>
+                <%} else {%>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="1" onclick='open_input(event)'>전체 재고 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="2" onclick='open_input(event)'>거래처 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="4" onclick='open_input(event)'>거래처 물품 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="7" onclick='open_input(event)'>입고 현황 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="9" onclick='open_input(event)'>발주 요청 조회</label>
+                <%} %>
             </div>
             <div id = "JEMU-side">
                 <label class="sidemenuTop" style="text-align: center; font-weight: bold; font-size : 20px">재무관리</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="11" onclick='open_input(event)'>전체 재무 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="12" onclick='open_input(event)'>고정 지출 금액 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="13" onclick='open_input(event)'>고정 지출 추가 입력</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="14" onclick='open_input(event)'>직원 명단 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="15" onclick='open_input(event)'>발주 대기 목록 조회</label>
-                <label class="sidemenu" ><input type = "radio" name = "sm" value="16" onclick='open_input(event)'>판매 실적 조회</label>
+                <% if (data["부서 ID"] == "재무") { %>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="11" onclick='open_input(event)'>전체 재무 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="12" onclick='open_input(event)'>고정 지출 금액 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="13" onclick='open_input(event)'>고정 지출 추가 입력</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="14" onclick='open_input(event)'>직원 명단 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="15" onclick='open_input(event)'>발주 대기 목록 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="16" onclick='open_input(event)'>판매 실적 조회</label>
+                <%} else {%>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="11" onclick='open_input(event)'>전체 재무 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="12" onclick='open_input(event)'>고정 지출 금액 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="14" onclick='open_input(event)'>직원 명단 조회</label>
+                    <label class="sidemenu" ><input type = "radio" name = "sm" value="16" onclick='open_input(event)'>판매 실적 조회</label>
+                <%} %>
             </div>
             <div id = "GOGEK-side">
                 <label class="sidemenuTop" style="text-align: center; font-weight: bold; font-size : 20px">고객관리</label>
@@ -126,6 +139,11 @@
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
                 <div><iframe class = "inside" src = "GoodsRegipage"></iframe></div>
             </div>
+            <div class="inputbox" id="input-item-warehousing">
+                <div class = "sidevalue">입고 처리</div></br>
+                <label><input type="text" id = ""><button type="submit">검색</button></label>
+                <div><iframe class = "inside" src = "Warehousingpage"></iframe></div>
+            </div>
             <div class="inputbox" id="input-item-search">
                 <div class = "sidevalue">입고 현황 조회</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
@@ -154,7 +172,7 @@
             <div class="inputbox" id="fixed-expenditure-input">
                 <div class = "sidevalue">고정 지출 추가 입력</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "https://www.naver.com"></iframe></div>
+                <div><iframe class = "inside" src = "InputFixedCostpage"></iframe></div>
             </div> 
             <div class="inputbox" id="staff-list-search">
                 <div class = "sidevalue">직원 명단 조회</div></br>
@@ -164,7 +182,7 @@
             <div class="inputbox" id="wating-order-search">
                 <div class = "sidevalue">발주 대기 목록 조회</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "https://www.naver.com"></iframe></div>
+                <div><iframe class = "inside" src = "ProcessOrderReqpage"></iframe></div>
             </div> 
             <div class="inputbox" id="sale-cost-search">
                 <div class = "sidevalue">판매 실적 조회</div></br>
@@ -178,17 +196,9 @@
             </div> 
         </div>
     </section>
-    <!-- 세션관리 -->
-    <input type="hidden" id="jsonData" value="<%= JSON.stringify(data)%>" />
+    <!-- <input type="hidden" id="jsonData" value="<%= JSON.stringify(data)%>" />
     <script>
-        var stringData = document.getElementById("jsonData").getAttribute("value");
-
-        var sData = sessionStorage.getItem("sessionData");
-        if(sData == null) {
-            sessionStorage.setItem("sessionData", stringData);
-        }
-        sData = sessionStorage.getItem("sessionData");
-    </script>
-    <!-- 세션관리 -->
+        var sData = document.getElementById("jsonData").getAttribute("value");
+    </script> -->
 </body>
 </html>
