--- a/views/Materials/ViewWarehousingpage.ejs
+++ b/views/Materials/ViewWarehousingpage.ejs
@@ -20,7 +20,13 @@
                 <td><%= elem["거래처 ID"] %></td>
                 <td><%= elem["물품명"] %></td>
                 <td><%= elem["입고 수량"] %></td>
-                <td><%= elem["입고 상태 정보"] %></td>
+                <td>
+                    <% if (elem["입고 상태 정보"] == 0) { %>
+                        대기중
+                    <% } else {%>
+                        elem["입고 상태 정보"]
+                    <% } %>
+                </td>
                 <td><%= elem["입고 예정 정보"] %></td>
             </tr>
         <% }); %>
