--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -162,12 +162,12 @@
             <div class="inputbox" id="ALLJEMU-search">
                 <div class = "sidevalue">전체 재무 조회</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "https://www.naver.com"></iframe></div>
+                <div><iframe class = "inside" src = "ViewAllFinancepage"></iframe></div>
             </div> 
             <div class="inputbox" id="fixed-expenditure-search">
                 <div class = "sidevalue">고정 지출 금액 조회</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "https://www.naver.com"></iframe></div>
+                <div><iframe class = "inside" src = "ViewAllFixedCostpage"></iframe></div>
             </div> 
             <div class="inputbox" id="fixed-expenditure-input">
                 <div class = "sidevalue">고정 지출 추가 입력</div></br>
@@ -177,7 +177,7 @@
             <div class="inputbox" id="staff-list-search">
                 <div class = "sidevalue">직원 명단 조회</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "https://www.naver.com"></iframe></div>
+                <div><iframe class = "inside" src = "ViewEmployeepage"></iframe></div>
             </div> 
             <div class="inputbox" id="wating-order-search">
                 <div class = "sidevalue">발주 대기 목록 조회</div></br>
@@ -187,12 +187,12 @@
             <div class="inputbox" id="sale-cost-search">
                 <div class = "sidevalue">판매 실적 조회</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "https://www.naver.com"></iframe></div>
+                <div><iframe class = "inside" src = "ViewSalespage"></iframe></div>
             </div> 
             <div class="inputbox" id="cs-list-search">
                 <div class = "sidevalue">CS목록 조회</div></br>
                 <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "https://www.naver.com"></iframe></div>
+                <div><iframe class = "inside" src = "ViewCspage"></iframe></div>
             </div> 
         </div>
     </section>
