--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -7,6 +7,7 @@
     <link rel = "stylesheet" href = "css/main.css">
     <link rel = "stylesheet" href = "css/id.css">
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script>
         function open_sidemenu(event){
             var jegomn = document.getElementById('JEGO-side');
@@ -53,6 +54,12 @@
                 }
             }
             box[Number(a)][Number(b)].style.display ="block";
+        }
+        const SearchFunc = (event) => {
+            let name = event.target.value;
+            let frame = document.getElementById(name + "Frame");
+            let value = document.getElementById(name + "Value").value;
+            frame.contentWindow.postMessage(value, '*');
         }
     </script>    
 </head>
@@ -116,13 +123,19 @@
         <div class="backgroundbox">
             <div class="inputbox" id="ALLJEGO-search">
                 <div class = "sidevalue">전체 재고 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewAllGoodspage"></iframe></div>
+                <label>
+                    <input type="text" id="AllGoodsValue">
+                    <button type="submit" value="AllGoods" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "AllGoodsFrame" src = "ViewAllGoodspage"></iframe></div>
             </div>
             <div class="inputbox" id="Corporate-search">
                 <div class = "sidevalue">거래처 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewCorppage"></iframe></div>
+                <label>
+                    <input type="text" id="CorpValue">
+                    <button type="submit" value="Corp" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "CorpFrame" src = "ViewCorppage"></iframe></div>
             </div>
             <div class="inputbox" id="Corporate-input">
                 <div class = "sidevalue">거래처 등록</div></br>
@@ -131,8 +144,11 @@
             </div>
             <div class="inputbox" id="Corporate-item-search">
                 <div class = "sidevalue">거래처 물품 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewCorpGoodspage"></iframe></div>
+                <label>
+                    <input type="text" id="CorpGoodsValue">
+                    <button type="submit" value="CorpGoods" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "CorpGoodsFrame" src = "ViewCorpGoodspage"></iframe></div>
             </div>
             <div class="inputbox" id="item-input">
                 <div class = "sidevalue">물품 등록</div></br>
@@ -146,8 +162,11 @@
             </div>
             <div class="inputbox" id="input-item-search">
                 <div class = "sidevalue">입고 현황 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewWarehousingpage"></iframe></div>
+                <label>
+                    <input type="text" id="WarehousingValue">
+                    <button type="submit" value="Warehousing" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "WarehousingFrame" src = "ViewWarehousingpage"></iframe></div>
             </div>
             <div class="inputbox" id="order">
                 <div class = "sidevalue">발주 요청</div></br>
@@ -156,18 +175,27 @@
             </div>
             <div class="inputbox" id="order-search">
                 <div class = "sidevalue">발주 요청 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewOrderReqpage"></iframe></div>
+                <label>
+                    <input type="text" id="OrderReqValue">
+                    <button type="submit" value="OrderReq" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "OrderReqFrame" src = "ViewOrderReqpage"></iframe></div>
             </div> 
             <div class="inputbox" id="ALLJEMU-search">
                 <div class = "sidevalue">전체 재무 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewAllFinancepage"></iframe></div>
+                <label>
+                    <input type="text" id="AllFinanceValue">
+                    <button type="submit" value="AllFinance" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "AllFinanceFrame" src = "ViewAllFinancepage"></iframe></div>
             </div> 
             <div class="inputbox" id="fixed-expenditure-search">
                 <div class = "sidevalue">고정 지출 금액 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewAllFixedCostpage"></iframe></div>
+                <label>
+                    <input type="text" id="AllFixedCostValue">
+                    <button type="submit" value="AllFixedCost" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "AllFixedCostFrame" src = "ViewAllFixedCostpage"></iframe></div>
             </div> 
             <div class="inputbox" id="fixed-expenditure-input">
                 <div class = "sidevalue">고정 지출 추가 입력</div></br>
@@ -176,23 +204,35 @@
             </div> 
             <div class="inputbox" id="staff-list-search">
                 <div class = "sidevalue">직원 명단 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewEmployeepage"></iframe></div>
+                <label>
+                    <input type="text" id="EmployeeValue">
+                    <button type="submit" value="Employee" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "EmployeeFrame" src = "ViewEmployeepage"></iframe></div>
             </div> 
             <div class="inputbox" id="wating-order-search">
                 <div class = "sidevalue">발주 대기 목록 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ProcessOrderReqpage"></iframe></div>
+                <label>
+                    <input type="text" id="ProcessOrderReqValue">
+                    <button type="submit" value="ProcessOrderReq" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "ProcessOrderReqFrame" src = "ProcessOrderReqpage"></iframe></div>
             </div> 
             <div class="inputbox" id="sale-cost-search">
                 <div class = "sidevalue">판매 실적 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewSalespage"></iframe></div>
+                <label>
+                    <input type="text" id="SalesValue">
+                    <button type="submit" value="Sales" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "SalesFrame" src = "ViewSalespage"></iframe></div>
             </div> 
             <div class="inputbox" id="cs-list-search">
                 <div class = "sidevalue">CS목록 조회</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "ViewCspage"></iframe></div>
+                <label>
+                    <input type="text" id="CsValue">
+                    <button type="submit" value="Cs" onclick="SearchFunc(event)">검색</button>
+                </label>
+                <div><iframe class = "inside" id = "CsFrame" src = "ViewCspage"></iframe></div>
             </div> 
         </div>
     </section>
