--- a/views/Finance/ViewAllFixedCostpage.ejs
+++ b/views/Finance/ViewAllFixedCostpage.ejs
@@ -4,22 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" href = "css/iframe.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-    <table border="1">
-        <th>날짜</th>
-        <th>기업 유지비</th>
-        <th>마케팅비</th>
-        <th>인건비</th>
-        <% data.forEach(function (elem) { %>
+    <table class ="">
+        <thead>
             <tr>
-                <td><%= elem["날짜"] %></td>
-                <td><%= elem["기업 유지비"] %></td>
-                <td><%= elem["마케팅비"] %></td>
-                <td><%= elem["인건비"] %></td>
+                <th class="cols">날짜</th>
+                <th class="cols">기업 유지비</th>
+                <th class="cols">마케팅비</th>
+                <th class="cols">인건비</th>
             </tr>
-        <% }); %>
+        </thead>
+        <tbody id = "loop-fixed-expenditure-list">
+            <% data.forEach(function (elem) { %>
+                <tr>
+                    <td class = "cell"><%= elem["날짜"] %></td>
+                    <td class = "cell money"><%= elem["기업 유지비"] %></td>
+                    <td class = "cell money"><%= elem["마케팅비"] %></td>
+                    <td class = "cell money"><%= elem["인건비"] %></td>
+                </tr>
+            <% }); %>
+        </tbody>
     </table>
     <script>
         window.addEventListener('message', ReceiveMsg);
@@ -36,6 +44,13 @@
             form.innerHTML = textData;
             document.body.append(form);
             form.submit();
+        }
+
+        var length = document.getElementsByClassName('money').length;
+        for (var i = 0; i < length; i++) {
+            var money = $('.money').eq(i).text();
+            var money2 = money.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+            $('.money').eq(i).text(money2);
         }
     </script>
 </body>
