--- a/views/Materials/ViewOrderReqpage.ejs
+++ b/views/Materials/ViewOrderReqpage.ejs
@@ -4,36 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" href = "css/iframe.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-    <table border="1">
-        <th>발주 ID</th>
-        <th>물품 ID</th>
-        <th>거래처 ID</th>
-        <th>물품명</th>
-        <th>수량</th>
-        <th>물품 도매가</th>
-        <th>처리 구분</th>
-        <% data.forEach(function (elem) { %>
+    <table class ="">
+        <thead>
             <tr>
-                <td><%= elem["발주 ID"] %></td>
-                <td><%= elem["물품 ID"] %></td>
-                <td><%= elem["거래처 ID"] %></td>
-                <td><%= elem["물품명"] %></td>
-                <td><%= elem["수량"] %></td>
-                <td><%= elem["물품 도매가"] %></td>
-                <td>
-                    <% if (elem["처리 구분"] == -1) { %>
-                        반려
-                    <% } else if (elem["처리 구분"] == 0) { %>
-                        미처리
-                    <% } else {%>
-                        승인
-                    <% } %>
-                </td>
+                <th class="cols">발주 ID</th>
+                <th class="cols">물품 ID</th>
+                <th class="cols">거래처 ID</th>
+                <th class="cols">물품명</th>
+                <th class="cols">수량</th>
+                <th class="cols">물품 도매가</th>
+                <th class="cols">처리 구분</th>
             </tr>
-        <% }); %>
+        </thead>
+        <tbody id = "loop-order-list">
+            <% data.forEach(function (elem) { %>
+                <tr>
+                    <td class = "cell"><%= elem["발주 ID"] %></td>
+                    <td class = "cell"><%= elem["물품 ID"] %></td>
+                    <td class = "cell"><%= elem["거래처 ID"] %></td>
+                    <td class = "cell"><%= elem["물품명"] %></td>
+                    <td class = "cell money"><%= elem["수량"] %></td>
+                    <td class = "cell money"><%= elem["물품 도매가"] %></td>
+                    <td class = "cell">
+                        <% if (elem["처리 구분"] == -1) { %>
+                            반려
+                        <% } else if (elem["처리 구분"] == 0) { %>
+                            미처리
+                        <% } else {%>
+                            승인
+                        <% } %>
+                    </td>
+                </tr>
+            <% }); %>
+        </tbody>
     </table>
     <script>
         window.addEventListener('message', ReceiveMsg);
@@ -50,6 +58,13 @@
             form.innerHTML = textData;
             document.body.append(form);
             form.submit();
+        }
+
+        var length = document.getElementsByClassName('money').length;
+        for (var i = 0; i < length; i++) {
+            var money = $('.money').eq(i).text();
+            var money2 = money.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+            $('.money').eq(i).text(money2);
         }
     </script>
 </body>
