--- a/views/Materials/ViewWarehousingpage.ejs
+++ b/views/Materials/ViewWarehousingpage.ejs
@@ -4,32 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" href = "css/iframe.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-    <table border="1">
-        <th>물품 ID</th>
-        <th>거래처 ID</th>
-        <th>물품명</th>
-        <th>입고 수량</th>
-        <th>입고 상태 정보</th>
-        <th>입고 예정 정보</th>
-        <% data.forEach(function (elem) { %>
+    <table class ="">
+        <thead>
             <tr>
-                <td><%= elem["물품 ID"] %></td>
-                <td><%= elem["거래처 ID"] %></td>
-                <td><%= elem["물품명"] %></td>
-                <td><%= elem["입고 수량"] %></td>
-                <td>
-                    <% if (elem["입고 상태 정보"] == 0) { %>
-                        대기중
-                    <% } else {%>
-                        elem["입고 상태 정보"]
-                    <% } %>
-                </td>
-                <td><%= elem["입고 예정 정보"] %></td>
+                <th class="cols">물품 ID</th>
+                <th class="cols">거래처 ID</th>
+                <th class="cols">물품명</th>
+                <th class="cols">입고 수량</th>
+                <th class="cols">입고 상태 정보</th>
+                <th class="cols">입고 예정 정보</th>
             </tr>
-        <% }); %>
+        </thead>
+        <tbody id = "loop-input-list">
+            <% data.forEach(function (elem) { %>
+                <tr>
+                    <td class = "cell"><%= elem["물품 ID"] %></td>
+                    <td class = "cell"><%= elem["거래처 ID"] %></td>
+                    <td class = "cell"><%= elem["물품명"] %></td>
+                    <td class = "cell money"><%= elem["입고 수량"] %></td>
+                    <td class = "cell">
+                        <% if (elem["입고 상태 정보"] == 0) { %>
+                            대기중
+                        <% } else {%>
+                            elem["입고 상태 정보"]
+                        <% } %>
+                    </td>
+                    <td class = "cell"><%= elem["입고 예정 정보"] %></td>
+                </tr>
+            <% }); %>
+        </tbody>
     </table>
     <script>
         window.addEventListener('message', ReceiveMsg);
@@ -46,6 +54,13 @@
             form.innerHTML = textData;
             document.body.append(form);
             form.submit();
+        }
+
+        var length = document.getElementsByClassName('money').length;
+        for (var i = 0; i < length; i++) {
+            var money = $('.money').eq(i).text();
+            var money2 = money.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+            $('.money').eq(i).text(money2);
         }
     </script>
 </body>
