--- a/public/css/iframe.css
+++ b/public/css/iframe.css
@@ -9,7 +9,7 @@ body{
     margin: 0 auto;
     justify-content:space-around; 
     align-items : center;
-    height: 100vh;
+    height: 50vh;
 }
 .Topheader {
     display: flex;
@@ -172,11 +172,12 @@ th,td{
     border: 1px solid rgb(0, 0, 0);
     background-clip: padding-box;
     scroll-snap-align: start;
-    background-color: white;
+    background-color: #dadce0;
     width: 200px;
 }
 th{
     text-align: left;
+    background-color: white;
 }
 label.input_action>input{
     background-color: white;
@@ -219,4 +220,20 @@ input[type="number"]::-webkit-inner-spin-button{
     border-radius: 5px;
     margin-top: 10px;
     box-shadow: 3px 3px 5px 3px #dadce0 inset;;
+}
+.inputbtn2{
+    width: 100%; height: 100%;
+    background: rgb(211, 211, 211);
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 1px 1px #181818;
+}
+.inputbtn2:active{
+    width: 100%; height: 100%;
+    background: rgb(211, 211, 211);
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 1px 1px #dadce0 inset;
 }
