--- a/views/Finance/ProcessOrderReqpage.ejs
+++ b/views/Finance/ProcessOrderReqpage.ejs
@@ -4,35 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <link rel = "stylesheet" href = "css/iframe.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-    <table border="1">
-        <th>발주 ID</th>
-        <th>물품 ID</th>
-        <th>거래처 ID</th>
-        <th>물품명</th>
-        <th>수량</th>
-        <th>물품 도매가</th>
-        <th colspan="2">처리 구분</th>
-        <% data.forEach(function (elem) { %>
-            <% if (elem["처리 구분"] == 0) { %>            
-                <tr>
-                    <td><%= elem["발주 ID"] %></td>
-                    <td><%= elem["물품 ID"] %></td>
-                    <td><%= elem["거래처 ID"] %></td>
-                    <td><%= elem["물품명"] %></td>
-                    <td><%= elem["수량"] %></td>
-                    <td><%= elem["물품 도매가"] %></td>
-                    <form action="/OrderPermission" method="post" accept-charset="UTF-8">
-                        <input type="hidden" name="id" value="<%= elem["발주 ID"] %>">
-                        <td><button type="submit" name = "value" value="1">승인</button></td>
-                        <td><button type="submit" name = "value" value="-1">반려</button></td>
-                    </form>
-                </tr>
-            <% } %>
-        <% }); %>
+    <table class ="">
+        <thead>
+            <tr>
+                <th class="cols">발주 ID</th>
+                <th class="cols">물품 ID</th>
+                <th class="cols">거래처 ID</th>
+                <th class="cols">물품명</th>
+                <th class="cols">수량</th>
+                <th class="cols">물품 도매가</th>
+                <th class="cols" colspan="2">처리 구분</th>
+            </tr>
+        </thead>
+        <tbody id = "loop-waiting-list">
+            <% data.forEach(function (elem) { %>
+                <% if (elem["처리 구분"] == 0) { %>  
+                    <tr>
+                        <td class = "cell"><%= elem["발주 ID"] %></td>
+                        <td class = "cell"><%= elem["물품 ID"] %></td>
+                        <td class = "cell"><%= elem["거래처 ID"] %></td>
+                        <td class = "cell"><%= elem["물품명"] %></td>
+                        <td class = "cell money"><%= elem["수량"] %></td>
+                        <td class = "cell money"><%= elem["물품 도매가"] %></td>
+                        <form action="/OrderPermission" method="post" accept-charset="UTF-8">
+                            <input type="hidden" name="id" value="<%= elem["발주 ID"] %>">
+                            <td class = "cell"><button class="inputbtn2" type="submit" name = "value" value="1">승인</button></td>
+                            <td class = "cell"><button class="inputbtn2" type="submit" name = "value" value="-1">반려</button></td>
+                        </form>
+                    </tr>
+                <% } %>
+            <% }); %>
+        </tbody>
     </table>
+    <script>
+        var length = document.getElementsByClassName('money').length;
+        for (var i = 0; i < length; i++) {
+            var money = $('.money').eq(i).text();
+            var money2 = money.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+            $('.money').eq(i).text(money2);
+        }
+    </script>
 </body>
 </html>
