--- a/views/Materials/CorpRegipage.ejs
+++ b/views/Materials/CorpRegipage.ejs
@@ -4,23 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" href = "css/iframe.css">
 </head>
 
-<body>
-    <form action="/CorporateRegistration" method="post"accept-charset="UTF-8">
-        <div class = "int-area">
-            <input type = "text" name = "id" id = "id"
-            autocomplete="off">
-            <label for = "id">거래처 ID</label>
-        </div>
-        <div class = "int-area">
-            <input type = "text" name = "name" id = "name"
-            autocomplete = "off">
-            <label for = "name">거래처 명</label>
-        </div>
-        <div class = "btn-area">
-            <button type="submit">등록</button>
-        </div>
-    </form>
+<body>    
+    <div class ="input-tabel">
+        <table>
+            <tr>
+                <td class = "input-head">거래처 ID</td>
+                <td><label class = "input_action"><input type="text" name = "id" id = "id"><br></label></td>
+            </tr>
+            <tr>
+                <td class = "input-head">거래처명</td>
+                <td><label class = "input_action"><input type="text" name = "name" id = "name"><br></label></td>
+            </tr>
+        </table>
+        <label class = "input_action"><button class="inputbtn" type="submit" onclick='Send()'>전송하기</button></label>
+    </div>
 </body>
+<script>
+    const Send = () => {
+        let id = document.getElementById("id").value;
+        let name = document.getElementById("name").value;
+
+        let form = document.createElement('form');
+        form.action = '/CorporateRegistration';
+        form.method = 'POST';
+        form.acceptCharset = "UTF-8";
+
+        let textData = '<input type="hidden" name="id" value="' + id + '">';
+        textData += '<input type="hidden" name="name" value="' + name + '">';
+        
+        form.innerHTML = textData;
+        document.body.append(form);
+        form.submit();
+    }
+</script>
 </html>
+
