--- a/views/Materials/GoodsRegipage.ejs
+++ b/views/Materials/GoodsRegipage.ejs
@@ -4,38 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" href = "css/iframe.css">
 </head>
 
 <body>
-    <form action="/GoodsRegistration" method="post"accept-charset="UTF-8">
-        <div class = "int-area">
-            <input type = "text" name = "corpid" id = "corpid"
-            autocomplete = "off">
-            <label for = "corpid">거래처 ID</label>
-        </div>
-        <div class = "int-area">
-            <input type = "text" name = "goodsid" id = "goodsid"
-            autocomplete = "off">
-            <label for = "goodsid">물품 ID</label>
-        </div>
-        <div class = "int-area">
-            <input type = "text" name = "name" id = "name"
-            autocomplete = "off">
-            <label for = "name">물품명</label>
-        </div>
-        <div class = "int-area">
-            <input type = "text" name = "wholesale" id = "wholesale"
-            autocomplete = "off">
-            <label for = "wholesale">도매가</label>
-        </div>
-        <div class = "int-area">
-            <input type = "text" name = "retail" id = "retail"
-            autocomplete = "off">
-            <label for = "retail">소매가</label>
-        </div>
-        <div class = "btn-area">
-            <button type="submit">등록</button>
-        </div>
-    </form>
+    <div class ="input-tabel">
+        <table>
+            <tr>
+                <td class = "input-head">거래처 ID</td>
+                <td><label class = "input_action"><input type="text" name = "corpid" id = "corpid"><br></label></td>
+            </tr>
+            <tr>
+                <td class = "input-head">물품 ID</td>
+                <td><label class = "input_action"><input type="text" name = "goodsid" id = "goodsid"><br></label></td>
+            </tr>
+            <tr>
+                <td class = "input-head">물품명</td>
+                <td><label class = "input_action"><input type="text" name = "name" id = "name"><br></label></td>
+            </tr>
+            <tr>
+                <td class = "input-head">도매가</td>
+                <td><label class = "input_action"><input type="text" name = "wholesale" id = "wholesale"><br></label></td>
+            </tr>
+            <tr>
+                <td class = "input-head">소매가</td>
+                <td><label class = "input_action"><input type="text" name = "retail" id = "retail"><br></label></td>
+            </tr>
+        </table>
+        <label class = "input_action"><button class="inputbtn" type="submit" onclick='Send()'>전송하기</button></label>
+    </div>
 </body>
+<script>
+    const Send = () => {
+        let corpid = document.getElementById("corpid").value;
+        let goodsid = document.getElementById("goodsid").value;
+        let name = document.getElementById("name").value;
+        let wholesale = document.getElementById("wholesale").value;
+        let retail = document.getElementById("retail").value;
+
+        let form = document.createElement('form');
+        form.action = '/GoodsRegistration';
+        form.method = 'POST';
+        form.acceptCharset = "UTF-8";
+
+        let textData = '<input type="hidden" name="corpid" value="' + corpid + '">';
+        textData += '<input type="hidden" name="goodsid" value="' + goodsid + '">';
+        textData += '<input type="hidden" name="name" value="' + name + '">';
+        textData += '<input type="hidden" name="wholesale" value="' + wholesale + '">';
+        textData += '<input type="hidden" name="retail" value="' + retail + '">';
+
+        form.innerHTML = textData;
+        document.body.append(form);
+        form.submit();
+    }
+</script>
 </html>
