--- a/views/Materials/ViewCorppage.ejs
+++ b/views/Materials/ViewCorppage.ejs
@@ -4,18 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" href = "css/iframe.css">
 </head>
 
 <body>
-    <table border="1">
-        <th>거래처 ID</th>
-        <th>거래처 명</th>
-        <% data.forEach(function (elem) { %>
+    <table class ="">
+        <thead>
             <tr>
-                <td><%= elem["거래처 ID"] %></td>
-                <td><%= elem["거래처 명"] %></td>
+                <th class="cols">거래처 ID</th>
+                <th class="cols">거래처 명</th>
             </tr>
-        <% }); %>
+        </thead>
+        <tbody id = "loop-corporate-list">
+            <% data.forEach(function (elem) { %>
+                <tr>
+                    <td class = "cell"><%= elem["거래처 ID"] %></td>
+                    <td class = "cell"><%= elem["거래처 명"] %></td>
+                </tr>
+            <% }); %>
+        </tbody>
     </table>
     <script>
         window.addEventListener('message', ReceiveMsg);
