--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -127,7 +127,7 @@
                     <input type="text" id="AllGoodsValue">
                     <button type="submit" value="AllGoods" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "AllGoodsFrame" src = "ViewAllGoodspage"></iframe></div>
+                <div><iframe frameborder="0" id = "AllGoodsFrame" src = "ViewAllGoodspage" width="100%" height="500px"></iframe></div>
             </div>
             <div class="inputbox" id="Corporate-search">
                 <div class = "sidevalue">거래처 조회</div></br>
@@ -135,12 +135,11 @@
                     <input type="text" id="CorpValue">
                     <button type="submit" value="Corp" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "CorpFrame" src = "ViewCorppage"></iframe></div>
+                <div><iframe frameborder="0" id = "CorpFrame" src = "ViewCorppage" width="100%" height="500px"></iframe></div>
             </div>
             <div class="inputbox" id="Corporate-input">
                 <div class = "sidevalue">거래처 등록</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "CorpRegipage"></iframe></div>
+                <div><iframe frameborder="0" src = "CorpRegipage" width="100%" height="300px"></iframe></div>
             </div>
             <div class="inputbox" id="Corporate-item-search">
                 <div class = "sidevalue">거래처 물품 조회</div></br>
@@ -148,17 +147,15 @@
                     <input type="text" id="CorpGoodsValue">
                     <button type="submit" value="CorpGoods" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "CorpGoodsFrame" src = "ViewCorpGoodspage"></iframe></div>
+                <div><iframe frameborder="0" id = "CorpGoodsFrame" src = "ViewCorpGoodspage" width="100%" height="500px"></iframe></div>
             </div>
             <div class="inputbox" id="item-input">
                 <div class = "sidevalue">물품 등록</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "GoodsRegipage"></iframe></div>
+                <div><iframe frameborder="0" src = "GoodsRegipage" width="100%" height="400px"></iframe></div>
             </div>
             <div class="inputbox" id="input-item-warehousing">
                 <div class = "sidevalue">입고 처리</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "Warehousingpage"></iframe></div>
+                <div><iframe frameborder="0" src = "Warehousingpage" width="100%" height="300px"></iframe></div>
             </div>
             <div class="inputbox" id="input-item-search">
                 <div class = "sidevalue">입고 현황 조회</div></br>
@@ -166,12 +163,11 @@
                     <input type="text" id="WarehousingValue">
                     <button type="submit" value="Warehousing" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "WarehousingFrame" src = "ViewWarehousingpage"></iframe></div>
+                <div><iframe frameborder="0" id = "WarehousingFrame" src = "ViewWarehousingpage" width="100%" height="500px"></iframe></div>
             </div>
             <div class="inputbox" id="order">
                 <div class = "sidevalue">발주 요청</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "OrderRequestpage"></iframe></div>
+                <div><iframe frameborder="0" src = "OrderRequestpage" width="100%" height="300px"></iframe></div>
             </div>
             <div class="inputbox" id="order-search">
                 <div class = "sidevalue">발주 요청 조회</div></br>
@@ -179,7 +175,7 @@
                     <input type="text" id="OrderReqValue">
                     <button type="submit" value="OrderReq" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "OrderReqFrame" src = "ViewOrderReqpage"></iframe></div>
+                <div><iframe frameborder="0" id = "OrderReqFrame" src = "ViewOrderReqpage" width="100%" height="500px"></iframe></div>
             </div> 
             <div class="inputbox" id="ALLJEMU-search">
                 <div class = "sidevalue">전체 재무 조회</div></br>
@@ -187,7 +183,7 @@
                     <input type="text" id="AllFinanceValue">
                     <button type="submit" value="AllFinance" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "AllFinanceFrame" src = "ViewAllFinancepage"></iframe></div>
+                <div><iframe frameborder="0" id = "AllFinanceFrame" src = "ViewAllFinancepage" width="100%" height="500px"></iframe></div>
             </div> 
             <div class="inputbox" id="fixed-expenditure-search">
                 <div class = "sidevalue">고정 지출 금액 조회</div></br>
@@ -195,12 +191,11 @@
                     <input type="text" id="AllFixedCostValue">
                     <button type="submit" value="AllFixedCost" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "AllFixedCostFrame" src = "ViewAllFixedCostpage"></iframe></div>
+                <div><iframe frameborder="0" id = "AllFixedCostFrame" src = "ViewAllFixedCostpage" width="100%" height="500px"></iframe></div>
             </div> 
             <div class="inputbox" id="fixed-expenditure-input">
                 <div class = "sidevalue">고정 지출 추가 입력</div></br>
-                <label><input type="text" id = ""><button type="submit">검색</button></label>
-                <div><iframe class = "inside" src = "InputFixedCostpage"></iframe></div>
+                <div><iframe frameborder="0" src = "InputFixedCostpage" width="100%" height="300px"></iframe></div>
             </div> 
             <div class="inputbox" id="staff-list-search">
                 <div class = "sidevalue">직원 명단 조회</div></br>
@@ -208,7 +203,7 @@
                     <input type="text" id="EmployeeValue">
                     <button type="submit" value="Employee" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "EmployeeFrame" src = "ViewEmployeepage"></iframe></div>
+                <div><iframe frameborder="0" id = "EmployeeFrame" src = "ViewEmployeepage" width="100%" height="500px"></iframe></div>
             </div> 
             <div class="inputbox" id="wating-order-search">
                 <div class = "sidevalue">발주 대기 목록 조회</div></br>
@@ -216,7 +211,7 @@
                     <input type="text" id="ProcessOrderReqValue">
                     <button type="submit" value="ProcessOrderReq" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "ProcessOrderReqFrame" src = "ProcessOrderReqpage"></iframe></div>
+                <div><iframe frameborder="0" id = "ProcessOrderReqFrame" src = "ProcessOrderReqpage" width="100%" height="500px"></iframe></div>
             </div> 
             <div class="inputbox" id="sale-cost-search">
                 <div class = "sidevalue">판매 실적 조회</div></br>
@@ -224,7 +219,7 @@
                     <input type="text" id="SalesValue">
                     <button type="submit" value="Sales" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "SalesFrame" src = "ViewSalespage"></iframe></div>
+                <div><iframe frameborder="0" id = "SalesFrame" src = "ViewSalespage" width="100%" height="500px"></iframe></div>
             </div> 
             <div class="inputbox" id="cs-list-search">
                 <div class = "sidevalue">CS목록 조회</div></br>
@@ -232,7 +227,7 @@
                     <input type="text" id="CsValue">
                     <button type="submit" value="Cs" onclick="SearchFunc(event)">검색</button>
                 </label>
-                <div><iframe class = "inside" id = "CsFrame" src = "ViewCspage"></iframe></div>
+                <div><iframe frameborder="0" id = "CsFrame" src = "ViewCspage" width="100%" height="500px"></iframe></div>
             </div> 
         </div>
     </section>
